# SpiroBrixx

./: .gitignore  README.md  SpiroBrixxKonzept.md  SpiroBrixxLogo.py  SpiroClixxLogo.py  SpiroLogixxLogo.py  SpiroMatixxLogo.py  SpiroNautixxLogo.py  SpiroTrixxLogo.py  convert_photos.sh
CADfiles/: README.md  make.py  make_encoder.py  makemold.py  pyproject.toml  reset_numba_cache.sh  screw4iX.py  screw4knrl.py  screwbar4_45.py  screwbar4_45_fuzzy.py  screwbar4_45_fuzzy_lck.py  screwbar4_45_split_dowel.py  screwbarL4_45_fuzzy.py  screwbarLthin4_45_fuzzy.py  screwbarUUthin4_45_fuzzy.py  screwbarY4_45_fuzzy.py  screwbar_flat4_45_fuzzy.py
CADfiles/common/: spirostd.py
CADfiles/experiments/: screw4knrl_copy.py  screw4knrl_optthread.py  screwbar4_45_split.py
CADfiles/models/: encodermountI_4.py  notched_screwbarI_4.py  nut_knurl_1.py  nut_knurl_special_wsc_1.py  nut_knurl_special_wsc_4.py  screw_flat_1.py  screw_flat_4.py  screw_headless_4.py  screw_knurl_1.py  screw_knurl_4.py  screw_knurl_4_mold.py  screw_special_wsc_1.py  screwbarA_4.py  screwbarI_4.py  screwbarI_4X0.py  screwbarI_4X1.py  screwbarI_4_hole.py  screwbarI_4_new.py  screwbarI_4_stick.py  screwbarL_4.py  screwbarY_4.py  screwdriver.py  thin_screwbarA2_4.py  thin_screwbarAA_4_in.py  thin_screwbarAA_4_out.py  thin_screwbarA_4.py  thin_screwbarI_4.py  thin_screwbarLA_4_in.py  thin_screwbarLA_4_out.py  thin_screwbarLL_4_in.py  thin_screwbarLL_4_out.py  thin_screwbarL_4_in.py  thin_screwbarL_4_out.py  thin_screwbarO_4_in.py  thin_screwbarUU_4_in.py  thin_screwbarUU_4_out.py  thin_screwbarU_4_in.py  (+2 more)
(+11 files in other folders)
